# btimetable-booking

./: .gitignore  README.md
Booking/: CMakeLists.txt  ClientAPI.h  choicewindow.cpp  choicewindow.h  choicewindow.ui  entities.cpp  entities.h  errorprocessing.cpp  errorprocessing.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testdatabase.cpp  testdatabase.h
BookingApp/: BookingApp.pro  entities.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  testdatabase.cpp  testdatabase.h
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/: .ninja_deps  .ninja_log  Booking.ilk  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/.cmake/api/v1/reply/: cache-v2-87c13a95d4d002c8d8ee.json  cache-v2-df65531ac2254c7762f0.json  cmakeFiles-v1-88d007a33e4979261300.json  cmakeFiles-v1-fd2233d4fa49d8a14ed7.json  codemodel-v2-028e68506563eae236e9.json  codemodel-v2-a61fd5515cf638eb6ef4.json  index-2021-03-06T22-42-23-0039.json  index-2021-03-07T13-59-03-0933.json  target-Booking-Debug-ac03dd18edb7876ace0d.json  target-Booking-Debug-d3d8bd99e6570d431af1.json  target-Booking_autogen-Debug-237c86fcfe51dc8952a4.json  target-Booking_autogen_timestamp_deps-Debug-b479c38299e7df87ce7f.json
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/Booking_autogen/: deps
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/Booking_autogen/include/: ui_mainwindow.h
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-RelWithDebInfo/: .ninja_deps  .ninja_log  Booking.ilk  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-RelWithDebInfo/.cmake/api/v1/reply/: cache-v2-c6c399b3663548a1eee5.json  cmakeFiles-v1-479e0246427248ea7464.json  codemodel-v2-9a7a514eefb7626976c9.json  index-2021-03-07T09-57-48-0367.json  target-Booking-RelWithDebInfo-eea08464586ef3637556.json  target-Booking_autogen-RelWithDebInfo-0aa3d00a9f7f83bb4396.json  target-Booking_autogen_timestamp_deps-RelWithDebInfo-ccc89b14d7b6f5f36396.json
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-RelWithDebInfo/Booking_autogen/: deps
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-RelWithDebInfo/Booking_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-RelWithDebInfo/Booking_autogen/include/: ui_mainwindow.h
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/.cmake/api/v1/reply/: cache-v2-cd1666819253d8f634be.json  cmakeFiles-v1-1f30b92fc845d63bd339.json  codemodel-v2-55efb56b04dd70e5083d.json  index-2021-03-06T23-05-44-0301.json  target-Booking-Release-52a9523a17cf802b110b.json  target-Booking_autogen-Release-591516ab06e006c4fef1.json  target-Booking_autogen_timestamp_deps-Release-35b5a7e7649c4700af51.json
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/Booking_autogen/: deps
build-Booking-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/Booking_autogen/include/: ui_mainwindow.h
build-BookingApp-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-BookingApp-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/debug/: BookingApp.ilk  moc_mainwindow.cpp
